# RepoPack

./: LICENSE  QUICKSTART.md  README.md  example_usage.py  project_bundle.md  pyproject.toml
.github/workflows/: publish.yml
src/repopack/: __init__.py  packer.py
tests/: test_packer.py
